--- a/docker/8.3/php.ini
+++ b/docker/8.3/php.ini
@@ -11,6 +11,7 @@ opcache.enable_cli=1
     xdebug.mode = debug
     xdebug.start_with_request = yes
     xdebug.discover_client_host = true
+    xdebug.remote_enable = 1
     xdebug.idekey = VSC
     xdebug.client_host = host.docker.internal
     xdebug.client_port = 9003
